fixed stretching issue on big window resolutions

--- a/css/main.scss
+++ b/css/main.scss
@@ -23,10 +23,16 @@ $max-phone-width: 640px;
 
 /*<--Global*/
 
+html, body
+{
+    height: 100%;
+}
+
 .container-body {
 	background-color: $myblack;
 	background-image: url('../image/background_bloodborne.jpg'); 
 	background-repeat: no-repeat;
+	height: 100%;
 	min-width: 320px;
 	min-height: 600px;
 	overflow: hidden;
